# serializer version: 1
# name: TestRenderErrorSnapshot.test_generic_exception_snapshot
  '''
  ⚠️ **Invalid input**: bad input
  `rid: 01ARZ3NDEKTSV4RRFFQ69G5FAV`
  '''
# ---
# name: TestRenderErrorSnapshot.test_spec_error_snapshot
  '''
  ⚠️ **Spec validation failed**: agent 'atlas' is not configured for this tenant
  `rid: 01ARZ3NDEKTSV4RRFFQ69G5FAV`
  '''
# ---
# name: test_embed_render_snapshot[minimal_thinking]
  dict({
    'embed': EmbedData(phase=<TurnPhase.THINKING: 'thinking'>, title='🧠 thinking', description='⏱️ 42s', color=9807270, footer=None),
    'preview': None,
  })
# ---
# name: test_embed_render_snapshot[preview_present]
  dict({
    'embed': EmbedData(phase=<TurnPhase.THINKING: 'thinking'>, title='🧠 thinking', description='⏱️ 42s', color=9807270, footer=None),
    'preview': EmbedData(phase=<TurnPhase.THINKING: 'thinking'>, title='', description='💬 Let me check that for you.', color=9807270, footer=None),
  })
# ---
# name: test_embed_render_snapshot[saturated_trail_with_preview_and_cost]
  dict({
    'embed': EmbedData(phase=<TurnPhase.TOOL_RUNNING: 'tool_running'>, title='⚙️ running tool', description='⏱️ 42s\n⚙️ Read\n⚙️ Write\n⚙️ Bash\n⚙️ Grep\n⚙️ Glob', color=3447003, footer=None),
    'preview': EmbedData(phase=<TurnPhase.TOOL_RUNNING: 'tool_running'>, title='', description='💬 Preview text describing the ongoing work.', color=3447003, footer=None),
  })
# ---
# name: test_embed_render_snapshot[single_tool]
  dict({
    'embed': EmbedData(phase=<TurnPhase.TOOL_RUNNING: 'tool_running'>, title='⚙️ running tool', description='⏱️ 42s\n⚙️ Bash', color=3447003, footer=None),
    'preview': None,
  })
# ---
# name: test_embed_render_snapshot[terminal_done_no_cost]
  dict({
    'embed': EmbedData(phase=<TurnPhase.DONE: 'done'>, title='', description='', color=5763719, footer='Atlas · 42s · 1.5k in / 320 out'),
    'preview': None,
  })
# ---
# name: test_embed_render_snapshot[terminal_done_with_cost]
  dict({
    'embed': EmbedData(phase=<TurnPhase.DONE: 'done'>, title='', description='', color=5763719, footer='Atlas · 42s · 1.5k in / 320 out · $0.04'),
    'preview': None,
  })
# ---
# name: test_embed_render_snapshot[terminal_error_no_trail]
  dict({
    'embed': EmbedData(phase=<TurnPhase.ERROR: 'error'>, title='', description='', color=15548997, footer='❌ error · Atlas · 42s · 0 in / 0 out'),
    'preview': None,
  })
# ---
# name: test_embed_render_snapshot[terminal_error_with_reason]
  dict({
    'embed': EmbedData(phase=<TurnPhase.ERROR: 'error'>, title='', description='', color=15548997, footer='❌ rate limited · Atlas · 42s · 100 in / 50 out'),
    'preview': None,
  })
# ---
# name: test_embed_render_snapshot[thinking_no_now]
  dict({
    'embed': EmbedData(phase=<TurnPhase.THINKING: 'thinking'>, title='🧠 thinking', description='', color=9807270, footer=None),
    'preview': None,
  })
# ---
